add icon and logo on the banner

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Del Valle | Vivero</title>
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./assets/logo-200-removebg.png">
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="./assets/logo-200-removebg.png" alt="Logo de la tienda">
         <nav>
             <ul>
                 <li><a href="/#banner">quienes somos</a></li>
