--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Del Valle | Vivero</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="icon" href="./assets/logo-200-removebg.png">
+    <link rel="icon" href="./assets/Logo.png">
 </head>
 <body>
     <header>
-        <img src="./assets/logo-200-removebg.png" alt="Logo de la tienda">
+        <img src="./assets/Logo.svg" alt="Logo de la tienda">
         <nav>
             <ul>
                 <li><a href="/#banner">quienes somos</a></li>
