organize the assets folder, give the new location on CSS and add the photos of the products

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img width="200px" height="200 px" src="./assets/Logo.svg" alt="Logo de la tienda">
+        <img width="200px" height="200 px" src="./assets/logo/Logo.png" alt="Logo de la tienda">
         <nav>
             <ul>
                 <li><a href="/#banner">QUIENES SOMOS</a></li>
@@ -29,7 +29,7 @@
             <br>
             <P>Somos una empresa familiar que se dedica a la venta de plantas ornamentales de interior, ideales para decorar los ambiente de tu hogar, oficina o cualquier espacio al que desees darle un toque verde. Contamos con variedad de macetas para que tu planta se luzca en el espacio donde eligas colocarla. También te ofrecemos los sustratos indicados para que tus compañeras se desarrollen vigorosas. Estamos capacitados para asesorarte teniendo en cuenta el diseño de tu espacio y los requerimientos de la especie. </P>
             </div>
-            <img width="700px" height="400px" src="./assets/img_banner_1.jpg" alt="Foto de plantas ornamentales">
+            <img width="700px" height="400px" src="./assets/banner_img/img_banner_1.jpg" alt="Foto de plantas ornamentales">
             
         </section>
         <section id="categories">
