--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
@@ -49,73 +50,97 @@
             </div>
         </section>
         <section id="products">
-        <h2>nuestros productos</h2>
+        <h2>Nuestros productos</h2>
         <div class="container-grid-products">
             <div class="card">
                 <div class="container-img-product">
-                    <img src="" alt="">
+                    <img width="70%" height="70%" src="./assets/productos/Ficus_pandurata.png" alt="Imagen de Ficus Pandurata">
                 </div>
-                <h3>Nombre del producto</h3>
-                <h4>$ precio</h4>
+                <h3>Ficus Pandurata</h3>
+                <h4>$ 19.499</h4>
                 <button>
-                    Agregar al carrito
+                Agregar al carrito
                 </button>
-                <a href="" target="_blank">Ver mas</a>
             </div>
             <div class="card">
                 <div class="container-img-product">
-                    <img src="" alt="">
+                    <img width="70%" height="70%" src="./assets/productos/Monstera2.png" alt="Imagen de Monstera Deliciosa">
                 </div>
-                <h3>Nombre del producto</h3>
-                <h4>$ precio</h4>
+                <h3>Monstera Deliciosa</h3>
+                <h4>$ 14.420</h4>
                 <button>
                     Agregar al carrito
                 </button>
-                <a href="" target="_blank">Ver mas</a>
             </div>
             <div class="card">
                 <div class="container-img-product">
-                    <img src="" alt="">
+                    <img width="70%" height="70%" src="./assets/productos/Palmera_areca.png" alt="Imagen de Palmera Areca">
                 </div>
-                <h3>Nombre del producto</h3>
-                <h4>$ precio</h4>
+                <h3>Palmera Areca</h3>
+                <h4>$ 35.000</h4>
                 <button>
                     Agregar al carrito
                 </button>
-                <a href="" target="_blank">Ver mas</a>
             </div>
             <div class="card">
                 <div class="container-img-product">
-                    <img src="" alt="">
+                    <img width="70%" height="70%" src="./assets/productos/Palo_de_agua.png" alt="Imagen de Palo de Agua">
                 </div>
-                <h3>Nombre del producto</h3>
-                <h4>$ precio</h4>
+                <h3>Palo de Agua</h3>
+                <h4>$ 13.500</h4>
                 <button>
                     Agregar al carrito
                 </button>
-                <a href="" target="_blank">Ver mas</a>
             </div>
             <div class="card">
                 <div class="container-img-product">
-                    <img src="" alt="">
+                    <img width="70%" height="70%" src="./assets/productos/Sansevieria.png" alt="Imagen de Sansevieria">
                 </div>
-                <h3>Nombre del producto</h3>
-                <h4>$ precio</h4>
+                <h3>Sansevieria</h3>
+                <h4>$ 6.700</h4>
                 <button>
                     Agregar al carrito
                 </button>
-                <a href="" target="_blank">Ver mas</a>
             </div>
             <div class="card">
                 <div class="container-img-product">
-                    <img src="" alt="">
+                    <img width="70%" height="70%" src="./assets/productos/Maceta_ceramica.png" alt="Foto de Maceta de Ceramica">
                 </div>
-                <h3>Nombre del producto</h3>
-                <h4>$ precio</h4>
+                <h3>Maceta de Cerámica 24cm</h3>
+                <h4>$ 29.500</h4>
                 <button>
                     Agregar al carrito
                 </button>
-                <a href="" target="_blank">Ver mas</a>
+            </div>
+            <div class="card">
+                <div class="container-img-product">
+                    <img width="70%" height="70%" src="./assets/productos/Maceta_premium.png" alt="Foto Maceta Plástica Premium">
+                </div>
+                <h3>Maceta Plástica Premium N°27</h3>
+                <h4>$ 6300</h4>
+                <button>
+                    Agregar al carrito
+                </button>
+            </div>
+            <div class="card">
+                <div class="container-img-product">
+                    <img width="70%" height="70%" src="./assets/productos/Sustrato_interior.png" alt="Imagen de bolsa de sustrato para interior">
+                </div>
+                <h3>Sustrato Plantas de Interior 6L.</h3>
+                <h4>$ 3.700</h4>
+                <button>
+                    Agregar al carrito
+                </button>
+            </div>
+            <div class="card">
+                <div class="container-img-product">
+                    <img width="70%" height="70%" src="./assets/productos/Humus_lombriz.png" alt="Imagen de bolsa de humus de lombriz">
+                </div>
+                <h3>Humus de Lombriz 5L.</h3>
+                <h4>$ 2.800</h4>
+                <button>
+                    Agregar al carrito
+                </button>
             </div>
         </div>
         </section>
@@ -151,10 +176,14 @@
     </main>
     <footer>
         <h5>Contacto</h5>
-        <img src="" alt="">
-        <p>contacto@viverodelvalle.com</p>
-        <img src="" alt="">
-        <p>(011) 15437660</p>
+        <div class="contact-buttons">
+            <i class="bi bi-envelope"></i>
+            <a href="mailto:pablocapettini@gmail.com" target="_blank">pablocapettini@gmail.com</a>
+            <i class="bi bi-telephone"></i>
+            <a href="tel: 1134236770" target="_blank">(011) 1534236770</a>
+
+        </div>
+          
     </footer>
 </body>
 </html>
